# eyeFocus

./: CMakeLists.txt  LICENSE  README.md
doc/: cam_holder.mb  cam_holder.stl
src/: CMakeLists.txt  Debug.cpp  Debug.h  KalmanPoint.hpp  constants.h  estimateDistance.cpp  estimateDistance.hpp  findEyeCenter.cpp  findEyeCenter.h  findEyeCorner.cpp  findEyeCorner.h  findFace.cpp  findFace.h  findHeadmount.cpp  findHeadmount.h  findPupils.cpp  findPupils.hpp  findSkin.cpp  findSkin.h  main.cpp  setupEyeCoordinateSpace.cpp  setupEyeCoordinateSpace.h  setupHeadmount.cpp  setupHeadmount.h  setupSingleEye.cpp  setupSingleEye.hpp
src/Detector/: FindPupil.h  findEyeCenter.cpp  findEyeCenter.h  findEyeCorner.cpp  findEyeCorner.h  findFace.cpp  findFace.h  findPupil.h  findPupils.cpp  findPupils.hpp
src/Detector/ElSe/: algo.h  blob_gen.h  canny_impl.h  filter_edges.h  find_best_edge.h
src/Detector/ExCuSe/: algo.h  bw_select.h  canny_ml.h  find_best_edge.h  get_curves.h  optimize_pos.h  peek.h  remove_points_with_low_angle.h  th_angular_histo.h  zero_around_region_th_border.h
src/Detector/Timm/: findEyeCenter.cpp  findEyeCenter.h
src/Estimate/: estimateDistance.cpp  estimateDistance.h  estimateDistance.hpp
src/Helper/: FileIO.h  FrameReader.h  Graph.h  KalmanPoint.h  KalmanPoint.hpp  LogWriter.h  QR.h  helper.h
src/Modules/: captureVideo.cpp  captureVideo.h  trackingDualCam.cpp  trackingDualCam.h  trackingHeadmount.cpp  trackingHeadmount.h  trackingSingleCam.cpp  trackingSingleCam.h
src/Setup/: captureVideo.cpp  setupDualCam.cpp  setupDualCam.h  setupEyeCoordinateSpace.cpp  setupEyeCoordinateSpace.h  setupHeadmount.cpp  setupHeadmount.h  setupSingleEye.cpp  setupSingleEye.h  setupSingleEye.hpp
tools/eyePosResizer/: CMakeLists.txt  README.md  eyePosResizer  main.cpp
tools/kalmanNoiseR/: CMakeLists.txt  README.md  kalmanNoiseR  main.cpp
tools/logEvaluator/: CMakeLists.txt  README.md  logEvaluator  main.cpp
tools/logPlayer/: CMakeLists.txt  README.md  logPlayer  main.cpp
